Update documentation ODL shim